<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.fragment.Launcher">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fidelityList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:contentDescription="@string/query"
        app:fabCustomSize="46dp"
        app:maxImageSize="32dp"
        app:srcCompat="@drawable/search" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">


        <LinearLayout
            android:id="@+id/menuAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/scan"
                app:fabCustomSize="46dp"
                app:maxImageSize="32dp"
                app:srcCompat="@drawable/camera" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/open"
                app:fabCustomSize="46dp"
                app:maxImageSize="32dp"
                app:srcCompat="@drawable/open" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/manual"
                app:fabCustomSize="46dp"
                app:maxImageSize="32dp"
                app:srcCompat="@drawable/edit" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:contentDescription="@string/expand"
            app:fabCustomSize="46dp"
            app:maxImageSize="32dp" />
    </LinearLayout>

</RelativeLayout>